[package]
name = "mdgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdgen"
path = "src/main.rs"

[[bin]]
name = "mdgen-server"
path = "src/server.rs"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
rand_chacha = "0.3"
tokio-tungstenite = "0.20"
futures-util = "0.3"